--- a/Default.html
+++ b/Default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Page Title</title>
+  <title>My Page Title - V2</title>
   <meta name="description" content="My Page Description">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
